...
        }}
      />
      <Tabs.Screen
        name="scan"
        options={{
          title: "Scan",
          tabBarButtonTestID: "tab-scan",
          tabBarButton: () => (
            <TabButton title="Scan" active={false} testID="tab-scan" onPress={() => router.push("/scan-modal")} />
          )
        }}
      />
      <Tabs.Screen
...
